# MiniMax-CLI

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  OPTIMIZATION_PROMPT.md  PLAN.md  README.md  RELEASE_PROMPT.md  TUI_UPGRADES.md  VOICE_AND_TONE.md  config.example.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  crates-publish.yml  publish.yml  release.yml
Mini-Agent-main/: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  MANIFEST.in  pyproject.toml
Mini-Agent-main/examples/: 01_basic_tools.py  02_simple_agent.py  03_session_notes.py
Mini-Agent-main/mini_agent/: agent.py  cli.py  config.py
Mini-Agent-main/mini_agent/acp/: __init__.py
Mini-Agent-main/mini_agent/config/: config-example.yaml  mcp.json
Mini-Agent-main/mini_agent/llm/: llm_wrapper.py
Mini-Agent-main/mini_agent/tools/: bash_tool.py  mcp_loader.py  skill_loader.py
Mini-Agent-main/scripts/: setup-config.ps1  setup-config.sh
Mini-Agent-main/tests/: __init__.py  test_acp.py  test_agent.py  test_bash_tool.py  test_integration.py  test_llm.py  test_markdown_links.py  test_mcp.py  test_note_tool.py  test_session_integration.py  test_skill_loader.py  test_skill_tool.py  test_tool_schema.py  test_tools.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DUO.md  MCP.md  MODES.md  PALETTE.md  README.md  RLM.md  VOICE_AND_TONE.md  codex_quality_prompt.md  coding-plan-integration.md  rlm_gap_analysis.md
npm/: install.js  package.json
python/minimax_cli/: cli.py
skills/audiobook-studio/: SKILL.md
skills/audiobook-workshop/: SKILL.md
skills/music-promo-pack/: SKILL.md
skills/photo-learning/: SKILL.md
skills/short-drama-kit/: SKILL.md
skills/storybook-lesson/: SKILL.md
skills/video-studio/: SKILL.md
skills/voiceover-studio/: SKILL.md
src/: agent.rs  client.rs  command_safety.rs  compaction.rs  config.rs  duo.rs  error_hints.rs  features.rs  hooks.rs  llm_client.rs  logging.rs  main.rs  mcp.rs  memory.rs  models.rs  models_catalog.rs  palette.rs  pricing.rs  project_context.rs  project_doc.rs  prompts.rs  provider.rs  rlm.rs  session.rs  session_manager.rs  settings.rs  skills.rs  smoke.rs  snippets.rs  ui.rs  utils.rs
src/commands/: config.rs  core.rs  debug.rs  doctor.rs  init.rs  mcp.rs  mod.rs  pins.rs  queue.rs  reload.rs  rlm.rs  session.rs  setup.rs  skills.rs  snippets.rs  usage.rs
src/core/: engine.rs  events.rs  mod.rs  ops.rs  session.rs  tool_parser.rs  turn.rs
src/modules/: audio.rs  files.rs  image.rs  mod.rs  music.rs  text.rs  video.rs
src/prompts/: agent.txt  base.txt  duo.txt  normal.txt  plan.txt  rlm.txt
src/responses_api_proxy/: mod.rs  read_api_key.rs
src/sandbox/: landlock.rs  mod.rs  policy.rs  seatbelt.rs
src/tools/: artifact.rs  coding.rs  duo.rs  execution.rs  file.rs  git.rs  investigator.rs  memory.rs  minimax.rs  mod.rs  patch.rs  plan.rs  registry.rs  rlm.rs  search.rs  security.rs  shell.rs  spec.rs  subagent.rs  think.rs  todo.rs  web_search.rs
src/tui/: app.rs  approval.rs  clipboard.rs  command_completer.rs  duo_session_picker.rs  fuzzy_picker.rs  history.rs  history_picker.rs  mod.rs  model_picker.rs  scrolling.rs  search_view.rs  session_picker.rs  streaming.rs  suggestions.rs  syntax.rs  transcript.rs  tutorial.rs  ui.rs
src/tui/views/: duo_view.rs  mod.rs
src/tui/widgets/: header.rs  mod.rs
tests/: README.md  common.rs  config_tests.rs  engine_tests.rs  features_tests.rs  palette_audit.rs  web_search_tests.rs  workspace_tests.rs
tests/tools/: file_tests.rs  git_tests.rs  memory_tests.rs  shell_tests.rs  subagent_tests.rs
