[package]
name = "minimax-cli"
version = "0.1.0"
edition = "2024"
description = "Unofficial MiniMax Platform CLI - Chat, Agent, Image, Video, Audio, Music generation"
license = "MIT"
repository = "https://github.com/user/minimax-cli"
keywords = ["minimax", "cli", "ai", "agent", "llm"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
bytes = "1.11.0"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
crossterm = "0.28"
dotenvy = "0.15.7"
dirs = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.18.0"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart"] }
rustyline = "15.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.7"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
unicode-width = "0.2"
