[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MiniMax-CLI"
version = "0.1.0a1"
description = "Unofficial MiniMax CLI - downloads and runs the Rust binary"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hmbown" }]
keywords = ["minimax", "cli", "ai", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Hmbown/MiniMax-CLI"
Source = "https://github.com/Hmbown/MiniMax-CLI"

[project.scripts]
minimax-cli = "minimax_cli.cli:main"

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]
